--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,12 @@ edition = "2021"
 #chrono = "0.4.20"
 openssl = "0.10.40"
 borsh = "0.9.3"
+
+libp2p = { version = "0.39", features = ["tcp-tokio", "mdns"] }
+tokio = { version = "1.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "fs"] }
+serde = {version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+once_cell = "1.5"
+log = "0.4"
+pretty_env_logger = "0.4"
+
