--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ libp2p = { version = "0.39", features = ["tcp-tokio", "mdns"] }
 tokio = { version = "1.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "fs"] }
 serde = {version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde-binary = "0.4.0"
 once_cell = "1.5"
 log = "0.4"
 pretty_env_logger = "0.4"
