--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,15 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-#chrono = "0.4.20"
 openssl = "0.10.40"
 borsh = "0.9.3"
-
-libp2p = { version = "0.39", features = ["tcp-tokio", "mdns"] }
+libp2p = { version = "0.49", features = ["tcp-tokio", "mdns"] }
 tokio = { version = "1.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "fs"] }
-serde = {version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-once_cell = "1.5"
-log = "0.4"
-pretty_env_logger = "0.4"
-
+chrono = "0.4.23"
+rocket = { version = "0.5.0-rc.2", features = ["json"] }
+rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
+rocket_contrib = "0.4.11"
