--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,7 @@ clap = { version = "4.1.4", features = ["derive"]}
 either = "1.8.1"
 async-trait = "0.1.64"
 
-libp2p = { version = "0.50.0", features = ["tcp", "dns", "async-std", "noise", "mplex", "yamux", "websocket", "ping", "macros", "kad", "request-response"
-#   , "identify"
-] }
-libp2p-kad = "0.42.1"
-libp2p-identify = "0.41.1"
+libp2p = { version = "0.50.0", features = ["tcp", "dns", "async-std", "noise", "mplex", "yamux", "websocket", "ping", "macros", "kad", "request-response", "identify"] }
 
 rocket = { version = "0.5.0-rc.2", features = ["json"] }
 rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
