--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ chrono = "0.4.23"
 clap = { version = "4.1.4", features = ["derive"]}
 async-trait = "0.1.64"
 
-libp2p = { version = "0.50.0", features = ["tcp", "dns", "async-std", "noise", "mplex", "yamux", "websocket", "ping", "macros", "kad", "request-response", "identify"] }
+libp2p = { version = "0.51.0", features = ["tcp", "dns", "async-std", "noise", "mplex", "yamux", "websocket", "tokio", "macros", "kad", "request-response", "identify"] }
+tokio = { version = "1.26.0", features = ["full"] }
 rocket = { version = "0.5.0-rc.2", features = ["json"] }
 rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
 rocket_contrib = "0.4.11"
