--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ tokio = { version = "1.26.0", features = ["full"] }
 rocket = { version = "0.5.0-rc.2", features = ["json"] }
 rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
 rocket_contrib = "0.4.11"
+open = "3.4.0"
