--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,6 @@ hex = "0.4.3"
 log = "0.4.17"
 pretty_env_logger = "0.4.0"
 raft = "0.7.0"
+zip = "0.6.4"
+walkdir = "2.3.3"
+zip-extract = "0.1.2"
