--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Install protoc
+      run: apt-get install protobuf-compiler
     - name: Check
       run: cargo check --verbose
     - name: Fmt
