--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Install protoc
-      run: apt-get install protobuf-compiler
+      run: sudo apt-get install -y protobuf-compiler
     - name: Check
       run: cargo check --verbose
     - name: Fmt
