--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        toolchain: nightly
     - name: Install protoc
       run: sudo apt-get install -y protobuf-compiler
     - name: Check
