--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,12 +18,14 @@ jobs:
     - uses: actions/checkout@v3
     - name: Switch rust version
       run: rustup default nightly
+    - name: Update rust
+      run: rustup update
     - name: Install protoc
       run: sudo apt-get install -y protobuf-compiler
-    - name: Check
-      run: cargo check --verbose
     - name: Add component fmt
       run: rustup component add rustfmt
+    - name: Check
+      run: cargo check --verbose
     - name: Fmt
       run: cargo fmt --verbose
     - name: Clean
