--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ serde_derive = "1.0.154"
 hex = "0.4.3"
 log = "0.4.17"
 pretty_env_logger = "0.4.0"
-raft = "0.7.0"
+#raft = "0.7.0"
 zip = "0.6.4"
 walkdir = "2.3.3"
 zip-extract = "0.1.2"
