--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ futures = "0.3.25"
 chrono = "0.4.23"
 clap = { version = "4.1.4", features = ["derive"] }
 async-trait = "0.1.64"
-libp2p = { version = "0.51.2", features = ["tcp", "dns", "async-std", "noise", "mplex", "yamux", "websocket", "tokio", "macros", "kad", "request-response", "identify", "gossipsub"] }
+libp2p = { version = "0.51.3", features = ["tcp", "dns", "async-std", "noise", "mplex", "yamux", "websocket", "tokio", "macros", "kad", "request-response", "identify", "gossipsub", "quic"] }
 tokio = { version = "1.26.0", features = ["full"] }
 rocket = { version = "0.5.0-rc.2", features = ["json"] }
 rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
