--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ futures-timer = "3.0.0"
 async-std = "1.12.0"
 void = "1.0.2"
 bitcoin = { version = "0.30.0", features = ["rand", "rand-std"] }
+reqwest = { version = "0.11.17", features = ["json", "serde_json"] }
