--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -36,3 +36,14 @@ jobs:
       run: cargo test
     - name: Build
       run: cargo build --verbose
+
+  qodana:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: 'Qodana Scan'
+        uses: JetBrains/qodana-action@v2023.3
+        env:
+          QODANA_TOKEN: eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJvcmdhbml6YXRpb24iOiJ6OGdSYiIsInByb2plY3QiOiJBWWp2USIsInRva2VuIjoiM2VlUTEifQ.8MAwl__NYsdJnYZ9lacQbROCYLdukwWXDjS08xOqXb8
