--- a/.github/workflows/qodana_code_quality.yml
+++ b/.github/workflows/qodana_code_quality.yml
@@ -1,10 +1,13 @@
 name: Qodana
+
 on:
   workflow_dispatch:
   pull_request:
   push:
     branches:
       - master
+      - main
+      - 'releases/*'
 
 jobs:
   qodana:
@@ -12,6 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
+          ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
       - name: 'Qodana Scan'
         uses: JetBrains/qodana-action@v2023.2
