--- a/.github/workflows/qodana_code_quality.yml
+++ b/.github/workflows/qodana_code_quality.yml
@@ -2,12 +2,10 @@ name: Qodana
 
 on:
   workflow_dispatch:
-  pull_request:
   push:
-    branches:
-      - master
-      - main
-      - 'releases/*'
+    branches: [ "*" ]
+  pull_request:
+    branches: [ "*" ]
 
 jobs:
   qodana:
