--- a/qodana.yaml
+++ b/qodana.yaml
@@ -1,5 +1,5 @@
 version: "1.0"
 
 profile:
-  name: qodana.recommended
-linter: jetbrains/qodana-jvm-community:2023.1
+  name: qodana.starter
+linter: jetbrains/qodana-jvm:latest
