--- a/.github/workflows/qodana_code_quality.yml
+++ b/.github/workflows/qodana_code_quality.yml
@@ -1,11 +1,8 @@
 name: Qodana
-permissions: read-all
 on:
   workflow_dispatch:
-  push:
-    branches: [ "*" ]
   pull_request:
-    branches: [ "*" ]
+  push:
 
 jobs:
   qodana:
@@ -17,9 +14,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: ${{ github.event.pull_request.head.sha }}
-          fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.sha }}  # to check out the actual pull request commit, not the merge commit
+          fetch-depth: 0  # a full history is required for pull request analysis
       - name: 'Qodana Scan'
-        uses: JetBrains/qodana-action@v2023.2.0
+        uses: JetBrains/qodana-action@v2023.2.9
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
+#      - uses: github/codeql-action/upload-sarif@v2
+#        with:
+#          sarif_file: ${{ runner.temp }}/qodana/results/qodana.sarif.json
