--- a/qodana.yaml
+++ b/qodana.yaml
@@ -1,5 +1,11 @@
 version: "1.0"
-
+linter: jetbrains/qodana-jvm-community:2023.1
 profile:
-  name: qodana.starter
-linter: jetbrains/qodana-jvm:latest
+  name: qodana.recommended
+exclude:
+  - name: DialogTitleCapitalization
+  - name: IncompleteDestructuring
+  - name: UnstableApiUsage
+  - name: UnstableTypeUsedInSignature
+  - name: PropertyName
+  - name: PrivatePropertyName
