--- a/qodana.yaml
+++ b/qodana.yaml
@@ -1,11 +1,5 @@
-version: "1.0"
-linter: jetbrains/qodana-jvm-community:2023.1
-profile:
-  name: qodana.recommended
-exclude:
-  - name: DialogTitleCapitalization
-  - name: IncompleteDestructuring
-  - name: UnstableApiUsage
-  - name: UnstableTypeUsedInSignature
-  - name: PropertyName
-  - name: PrivatePropertyName
+#version: "1.0"
+#
+#profile:
+#  name: qodana.starter
+#linter: jetbrains/qodana-jvm:latest
