--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "html2pdf.js": "^0.10.1",
-    "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-to-pdf": "^0.0.14",
+    "sass": "^1.79.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
